# adv_robotics

./: .gitignore  .gitmodules  README.md
Scripts/: install_RA.sh
docs/: software_install-EN.md  software_install-PT.md
ros/src/TP01/: CMakeLists.txt  main.cpp  package.xml
scripts/: install_AR.sh  install_AR_WSL.sh  install_RA.sh  install_ROS.sh  install_gazebo2.sh  kill_ROS_apps.sh  shared_folders_vmware.sh  update_gazebo7.sh  update_qtcreator.sh
src/LW1/lw1_apps/: CMakeLists.txt  lw1_localization.py  lw1_map.py  lw1_navastar.py  package.xml  utils.py
src/LW2/lw2_sim/: CMakeLists.txt  package.xml
src/LW2/lw2_sim/src/: LocalFrameWorldFrameTransformations.cpp  LocalFrameWorldFrameTransformations.hpp  sim_control.cpp
src/TA1/: CMakeLists.txt  package.xml  ta1_virtualforces.cpp
src/TA1/factory_gazebo/: CMakeLists.txt  package.xml
src/TA1/factory_gazebo/worlds/: factory_world.sdf
src/TA1/launch/: ta1_map.launch  ta1_navastar.launch  ta1_virtualforces.launch
src/TA1/pioneer2dx_description/: CMakeLists.txt  package.xml
src/TA1/pioneer2dx_description/models/: model.sdf
src/TA1/pioneer2dx_description/models/UTM_30LX/: model.config
src/TA1/pioneer2dx_description/models/robot/: model.sdf
src/TA1/src/: virtualforces.cpp
src/TA1/ta1_apps/: CMakeLists.txt  package.xml
src/TA1/ta1_apps/launch/: factory_with_robot.launch
src/TA1/ta1_apps/src/: ta1_teleop.cpp
src/TA1/ta2_apps/: CMakeLists.txt
src/TA1/ta2_apps/src/: ta1_teleop.cpp
src/TA1_Map/: CMakeLists.txt  package.xml  ta1_map.launch
src/TA1_NavAStar/: CMakeLists.txt  package.xml  ta1_navastar.launch
src/TA1_VirtualForces/: CMakeLists.txt  package.xml  ta1_virtualforces.launch
src/TA1_exame/: CMakeLists.txt  package.xml
src/TA1_exame/launch/: ta1_map.launch  ta1_navgreedy.launch  ta1_virtualforces.launch
src/TA2/: Notes.txt  TODO.txt
src/TL2/: Notes.txt
src/TP01/: CMakeLists.txt  main.cpp  package.xml
src/TP02/: CMakeLists.txt  main.cpp  mytp2.launch  package.xml  tp02.launch  tp2.launch
src/TP03/: CMakeLists.txt  LocalFrameWorldFrameTransformations.cpp  LocalFrameWorldFrameTransformations.hpp  main.cpp  package.xml  tp03.cpp  tp03.launch
src/TP04/: CMakeLists.txt  LocalFrameWorldFrameTransformations.hpp  package.xml  (+2 more)
src/TP04_PCL/: CMakeLists.txt  package.xml  tp04_pcl.cpp  tp04_pcl.launch
src/TP06/: CMakeLists.txt  Graph.cpp  Graph.hpp  Node.cpp  Node.hpp  main.cpp  main.hpp  package.xml  tp06.cpp
src/TP07/: .directory  CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  package.xml  tp07.cpp  tp07.launch  utils.cpp
src/TP08/: CMakeLists.txt  ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.hpp  LocalFrameWorldFrameTransformations.cpp  TP8.cpp  TP8.hpp  main.cpp  package.xml  tp08.cpp  tp08.launch  utils.cpp  utils.hpp
src/TP08/src/: tp08.cpp
src/TP09/: CMakeLists.txt  ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.hpp  LocalFrameWorldFrameTransformations.cpp  LocalFrameWorldFrameTransformations.hpp  TP09.cpp  TP09.hpp  TP9.cpp  main.cpp  package.xml  tp09.cpp  tp09.launch  utils.cpp  utils.hpp
src/TP10/: CMakeLists.txt  ExtendedKalmanFilter.cpp  TP10.cpp  TP10.hpp  ex3.cpp  ex5.cpp  ex6.cpp  localization_node.cpp  localization_node.hpp  main.cpp  package.xml  tp10.launch  utils.hpp
src/TP11/: CMakeLists.txt  ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.hpp  LocalFrameWorldFrameTransformations.cpp  LocalFrameWorldFrameTransformations.hpp  TP11.cpp  TP11.hpp  localization_node.cpp  localization_node.hpp  main.cpp  navigation_node.cpp  package.xml  tp11.launch  utils.cpp  utils.hpp
src/TP12/: CMakeLists.txt  TP12.cpp  TP12.hpp  main.cpp  package.xml  tp12.launch
src/TP12/src/: tp12.cpp
src/TW01/: CMakeLists.txt  package.xml  tw01.py
src/TW04_PCL/: CMakeLists.txt  laser_config.yaml  package.xml  tw04_pcl.launch  tw04_pcl.py
src/TW05/: CMakeLists.txt  LocalFrameWorldFrameTransformations.py  package.xml  tw05.py  utils.py
src/TW11/: ActionMove2Pos.py  ActionRecharge.py  ActionRotate2Angle.py  ActionSelectNextPose.py  ActionStop.py  CMakeLists.txt  ExtendedKalmanFilter.py  LocalFrameWorldFrameTransformations.py  Navigation.py  Output.txt  example_state_machine.py  localization.py  myglobals.py  package.xml  simple_task.py  state_machine_example.py  tw11-actions.launch  tw11.launch  utils.py
src/TW11/action_defs/: Move2Pos.action  Rotate2Angle.action  Stop.action
src/TW11/src/: battery_manager.cpp
src/TW12/: CMakeLists.txt  ExtendedKalmanFilter.py  LocalFrameWorldFrameTransformations.py  package.xml  tw12.py  utils.py
src/ar_cpp_utils/: CMakeLists.txt  package.xml
src/ar_cpp_utils/src/: LocalFrameWorldFrameTransformations.cpp  battery_manager.cpp  sim_control.cpp
src/ar_utils/: CMakeLists.txt  package.xml
src/ar_utils/action/: Move2Pos.action  Move2Pose.action  MoveForklift.action  MoveVisualServoing.action  PlaySound.action  Recharge.action  SpeakText.action
src/ar_utils/ar_utils/: utils.py
src/ar_utils/include/ar_utils/: LocalFrameWorldFrameTransformations.hpp
src/ar_utils/msg/: ForkliftState.msg
src/ar_utils/src/: LocalFrameWorldFrameTransformations.cpp  battery_manager.cpp  sim_control.cpp
src/ar_utils/srv/: StartCharging.srv
src/markers_msgs/: CMakeLists.txt  package.xml
src/markers_msgs/msg/: Markers.msg
src/worlds/: CMakeLists.txt  package.xml
src/worlds/launch/: factory_laser.launch  factory_laser_launch.xml  factory_laser_with_landmarks_launch.xml  lw1_simulator.launch  lw1_simulator_launch.py  lw1_simulator_launch.xml  lw2_simulator.launch  lw2_simulator_launch.py  map_laser_launch.xml  map_laser_with_landmarks.launch  map_laser_with_landmarks2_launch.py  map_laser_with_landmarks2_launch.xml  map_laser_with_landmarks2_long_range.launch  map_laser_with_landmarks2_long_range_launch.xml  map_laser_with_landmarks_launch.xml
src/worlds/stage-worlds/: factory_laser.world  factory_laser_with_landmarks.world  lw1.world  map_laser_with_landmarks2.world
src/worlds/stage_worlds/: factory_laser_with_landmarks.world  lw1.world  lw2.world  map_laser.world  map_laser_with_landmarks2.world  sick_long_range.inc
(+378 files in other folders)
