<package>
  <name>tp04_pcl</name>
  <maintainer email="hugo.costelha@ipleiria.com">Hugo Costelha</maintainer>
  <description>
     tp04_pcl
  </description>
  <version>2.0.0</version>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
      
  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>libpcl-all</run_depend>
</package>
