<package>
  <name>tp09</name>
  <maintainer email="hugo.costelha@ipleiria.com">Hugo Costelha</maintainer>
  <description>
     tp09 - Extended Kalman Filter
  </description>
  <version>2.0.0</version>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
      
  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>markers_msgs</build_depend>
  <run_depend>roscpp</run_depend>
</package>
