<package>
  <name>tp10</name>
  <maintainer email="hugo.costelha@ipleiria.com">Hugo Costelha</maintainer>
  <description>
     tp10
  </description>
  <version>2.0.0</version>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
      
  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>opencv2</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tf</build_depend>
  <build_depend>opencv</build_depend>
</package>
