<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ar_cpp_utils</name>
  <version>3.0.0</version>
  <description>Several custom messages, services and actions interfaces, and auxiliar files and tools used in the Advanced Robotics course</description>
  <maintainer email="hugo.costelha@ipleiria.pt">Hugo Costelha</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
<!--   <buildtool_depend>ament_cmake_python</buildtool_depend> -->
<!--   <buildtool_depend>rosidl_default_generators</buildtool_depend> -->

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>
  <depend>ar_utils</depend>
  <depend>tf2_ros</depend>
<!--   <exec_depend>rosidl_default_generators</exec_depend> -->

  <!-- Message generation -->
<!--   <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend> -->

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>






