<package>
  <name>tp01</name>
  <maintainer email="hugo.costelha@gmail.com">Hugo Costelha</maintainer>
  <description>
     TP01- Robot keyboard teleoperation
  </description>
  <version>2.0.0</version>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
      
  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
</package>


